--- a/public/stylesheets/musicList.css
+++ b/public/stylesheets/musicList.css
@@ -1,18 +1,17 @@
 html body {
-    background-color: #E1EED9;
-
+	background-color: #e1eed9;
 }
-main{
+main {
 	margin-left: 3%;
 	margin-right: 3%;
 }
 
-#navbar-text{
+#navbar-text {
 	margin-left: 1%;
 }
-#genres-select{
+#genres-select {
 	margin-bottom: 1%;
 }
-#genres-label{
+#genres-label {
 	margin-bottom: 0;
 }
